MGS-1381 - using calc to fix max width issue on ios

--- a/resources/scss/base/_base.icons.scss
+++ b/resources/scss/base/_base.icons.scss
@@ -22,7 +22,8 @@
   @include media-query(tablet-down) {
     margin-left: -15px;
     max-width: none;
-    width: auto;
+    margin-right: -15px;
+    width: calc(100% + 30px);
   }
 
   display: block;
